--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,12 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<!-- Favicon -->
+		<link rel="icon" type="image/svg+xml" href="/favicon-dark.svg" />
+		<link rel="icon" type="image/svg+xml" href="/favicon-light.svg" media="(prefers-color-scheme: light)" />
+		<link rel="apple-touch-icon" href="/favicon-dark.svg" />
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
